--- a/assets/package.json
+++ b/assets/package.json
@@ -19,12 +19,13 @@
   },
   "dependencies": {
     "@inertiajs/react": "^2.0.14",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
     "phoenix": "workspace:*",
     "phoenix_html": "workspace:*",
     "phoenix_live_view": "workspace:*",
-    "tailwindcss": "^4.1.11"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "tailwindcss": "^4.1.11",
+    "zod": "^4.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
